--- a/configs/cluster/base_bo.yaml
+++ b/configs/cluster/base_bo.yaml
@@ -49,8 +49,8 @@ param_search_args:
 single_job_args:
     job_name: "algo"
     num_gpus: 0
-    num_logical_cores: 10
+    num_logical_cores: 5
     log_file: "log"
     err_file: "err"
-    env_name: "mle-toolbox"
+    env_name: "algonauts"
     time_per_job: "01:00:00"
