--- a/configs/train/base_config.json
+++ b/configs/train/base_config.json
@@ -6,18 +6,24 @@
                   "feature_model": "alexnet",
                   "dim_reduction": 100,
                   # Hyperparameter-specific data (BOpt)
+                  "bo_eval_metric": "mse_mean",
                   "bo_opt_iters": 30,
-                  "cv_folds": 10,
+                  "num_cv_folds": 10,
                   "smbo_config": {"base_estimator": "GP",
                                   "acq_func": "gp_hedge",
                                   "n_initial_points": 10}
                               },
  "log_config": {"time_to_track": ["total_bo_iters"],
-                "what_to_track": ["cv_score_mean", "cv_score_std",
+                "what_to_track": ["mse_mean",
+                                  "mae_mean",
+                                  "corr_mean",
                                   "best_bo_score"],
                 "time_to_print": ["total_bo_iters"],
-                "what_to_print": ["cv_score_mean",
-                                  "best_bo_score"],
+                "what_to_print": ["mse_mean",
+                                  "mae_mean",
+                                  "corr_mean",
+                                  "best_bo_score",
+                                  "lambda_reg"],
                 "print_every_k_updates": 1,
                 "overwrite_experiment_dir": 1},
  "net_config": {# Encoding model-specific data
