--- a/configs/cluster/base_bo.yaml
+++ b/configs/cluster/base_bo.yaml
@@ -2,7 +2,7 @@
 meta_job_args:
     project_name: "algo"
     job_type: "hyperparameter-search"
-    base_train_fname: "bo_multi_cross_val.py"
+    base_train_fname: "run_algos.py"
     base_train_config: "configs/train/base_config.json"
     experiment_dir: "experiments/base_bo/"
 
@@ -17,8 +17,8 @@ param_search_args:
     problem_type: "final"
     eval_metrics:
         - "best_bo_score"
-    num_search_batches: 4
-    num_iter_per_batch: 25
+    num_search_batches: 2
+    num_iter_per_batch: 50
     num_evals_per_iter: 1
     params_to_search:
         categorical:
@@ -49,8 +49,11 @@ param_search_args:
 single_job_args:
     job_name: "algo"
     num_gpus: 0
-    num_logical_cores: 5
+    num_logical_cores: 3
     log_file: "log"
     err_file: "err"
     env_name: "algonauts"
     time_per_job: "01:00:00"
+    exclude_nodes:
+        - "cognition15"
+        - "cognition16"
