GradBoosting Encoding Model

--- a/configs/cluster/base_bo.yaml
+++ b/configs/cluster/base_bo.yaml
@@ -3,8 +3,8 @@ meta_job_args:
     project_name: "algo"
     job_type: "hyperparameter-search"
     base_train_fname: "run_algos.py"
-    base_train_config: "configs/train/mlp_vgg.json"
-    experiment_dir: "experiments/mlp_vgg_bo_30/"
+    base_train_config: "configs/train/elastic_vgg.json"
+    experiment_dir: "experiments/elastic_vgg_bo_25/"
 
 # Parameters specific to the hyperparameter search
 param_search_args:
@@ -19,8 +19,8 @@ param_search_args:
         - "best_bo_score"
         - "mse_mean"
         - "mae_mean"
-    num_search_batches: 1
-    num_iter_per_batch: 100
+    num_search_batches: 2
+    num_iter_per_batch: 50
     num_evals_per_iter: 1
     params_to_search:
         categorical:
@@ -51,7 +51,7 @@ param_search_args:
 single_job_args:
     job_name: "algo"
     num_gpus: 0
-    num_logical_cores: 2
+    num_logical_cores: 4
     log_file: "log"
     err_file: "err"
     env_name: "algonauts"
