--- a/configs/train/base_config.json
+++ b/configs/train/base_config.json
@@ -10,7 +10,7 @@
                   "dim_reduction": 100,
                   # Hyperparameter-specific data (BOpt)
                   "bo_eval_metric": "corr_mean",
-                  "bo_opt_iters": 1,
+                  "bo_opt_iters": 5,
                   "num_cv_folds": 10,
                   "smbo_config": {"base_estimator": "GP",
                                   "acq_func": "gp_hedge",
@@ -30,6 +30,6 @@
                                   "layer_id"],
                 "print_every_k_updates": 1,
                 "overwrite_experiment_dir": 1,
-                "model_type": "torch"},
+                "model_type": "sklearn"},
  "net_config": {# Encoding model-specific data
-                "encoding_model": "mlp_network"}}
+                "encoding_model": "elastic_net"}}
