--- a/configs/cluster/base_roi.yaml
+++ b/configs/cluster/base_roi.yaml
@@ -2,7 +2,7 @@
 meta_job_args:
     project_name: "algo"
     job_type: "hyperparameter-search"
-    base_train_fname: "run_algos.py"
+    base_train_fname: "run_roi.py"
     base_train_config: "configs/train/elastic_vgg.json"
     experiment_dir: "experiments/elastic_vgg_bo_25/"
 
@@ -19,8 +19,8 @@ param_search_args:
         - "best_bo_score"
         - "mse_mean"
         - "mae_mean"
-    num_search_batches: 2
-    num_iter_per_batch: 50
+    num_search_batches: 1
+    num_iter_per_batch: 90
     num_evals_per_iter: 1
     params_to_search:
         categorical:
@@ -34,7 +34,6 @@ param_search_args:
                 - 'V2'
                 - 'V3'
                 - 'V4'
-                - 'WB'
             subject_id:
                 - 'sub01'
                 - 'sub02'
@@ -51,7 +50,7 @@ param_search_args:
 single_job_args:
     job_name: "algo"
     num_gpus: 0
-    num_logical_cores: 4
+    num_logical_cores: 2
     log_file: "log"
     err_file: "err"
     env_name: "algonauts"
