--- a/configs/cluster/base_wb.yaml
+++ b/configs/cluster/base_wb.yaml
@@ -2,9 +2,9 @@
 meta_job_args:
     project_name: "algo"
     job_type: "hyperparameter-search"
-    base_train_fname: "run_wb.py"
-    base_train_config: "configs/train/elastic_vgg.json"
-    experiment_dir: "experiments/elastic_vgg_bo_25/"
+    base_train_fname: "run_roi.py"
+    base_train_config: "configs/train/wb/elastic_vgg.json"
+    experiment_dir: "experiments/wb/elastic_vgg_bo_15/"
 
 # Parameters specific to the hyperparameter search
 param_search_args:
