--- a/configs/train/base_config.json
+++ b/configs/train/base_config.json
@@ -32,4 +32,5 @@
                 "overwrite_experiment_dir": 1,
                 "model_type": "sklearn"},
  "net_config": {# Encoding model-specific data
-                "encoding_model": "elastic_net"}}
+                "encoding_model": "elastic_net"}
+}
