Barlow Twins Fine-Tuning

--- a/configs/cluster/base_roi.yaml
+++ b/configs/cluster/base_roi.yaml
@@ -57,3 +57,5 @@ single_job_args:
     err_file: "err"
     env_name: "algonauts"
     time_per_job: "05:00:00"
+    exlcude_nodes:
+        - "cognition13"
