--- a/configs/cluster/base_wb.yaml
+++ b/configs/cluster/base_wb.yaml
@@ -1,8 +1,8 @@
 # Meta Arguments: What job? What train .py file? Base config? Where to store?
 meta_job_args:
     project_name: "algo"
-    job_type: "hyperparameter-search"
-    base_train_fname: "run_roi.py"
+    experiment_type: "hyperparameter-search"
+    base_train_fname: "run_bayes_opt.py"
     base_train_config: "configs/train/wb/pls_resnet50.json"
     experiment_dir: "experiments/wb/pls_resnet50_bo_15/"
 
