--- a/configs/train/base_config.json
+++ b/configs/train/base_config.json
@@ -29,7 +29,7 @@
                                   "best_bo_score",
                                   "layer_id"],
                 "print_every_k_updates": 1,
-                "overwrite_experiment_dir": 1,
+                "overwrite": 1,
                 "model_type": "sklearn"},
  "net_config": {# Encoding model-specific data
                 "encoding_model": "elastic_net"}
